tests/spectest/return_call_indirect.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\83\81\80\80\00\19\60"
  "\00\00\60\00\01\7f\60\00\01\7e\60\00\01\7d\60\00"
  "\01\7c\60\01\7f\01\7f\60\01\7e\01\7e\60\01\7d\01"
  "\7d\60\01\7c\01\7c\60\02\7d\7f\01\7f\60\02\7f\7e"
  "\01\7e\60\02\7c\7d\01\7d\60\02\7e\7c\01\7c\60\01"
  "\7f\01\7f\60\01\7e\01\7e\60\01\7d\01\7d\60\01\7c"
  "\01\7c\60\02\7f\7d\00\60\02\7c\7e\02\7f\7d\60\04"
  "\7e\7c\7f\7e\00\60\01\7e\00\60\04\7e\7c\7f\7e\01"
  "\7f\60\01\7e\01\7f\60\01\7f\01\7e\60\02\7e\7e\01"
  "\7e\02\9a\80\80\80\00\01\08\73\70\65\63\74\65\73"
  "\74\0d\70\72\69\6e\74\5f\69\33\32\5f\66\33\32\00"
  "\11\03\af\80\80\80\00\2e\01\02\03\04\05\06\07\08"
  "\0a\0c\09\0b\0d\0e\0f\10\11\12\12\00\01\02\01\02"
  "\03\04\02\01\02\03\04\01\02\03\04\0a\17\01\01\05"
  "\06\18\05\05\11\12\04\91\80\80\80\00\04\70\01\14"
  "\14\70\01\01\01\70\01\01\01\70\01\02\02\07\d0\82"
  "\80\80\00\17\11\74\61\69\6c\70\72\69\6e\74\5f\69"
  "\33\32\5f\66\33\32\00\11\17\74\79\70\65\2d\66\36"
  "\34\2d\69\36\34\2d\74\6f\2d\69\33\32\2d\66\33\32"
  "\00\13\08\74\79\70\65\2d\69\33\32\00\17\08\74\79"
  "\70\65\2d\69\36\34\00\18\08\74\79\70\65\2d\66\33"
  "\32\00\19\08\74\79\70\65\2d\66\36\34\00\1a\0a\74"
  "\79\70\65\2d\69\6e\64\65\78\00\1b\0e\74\79\70\65"
  "\2d\66\69\72\73\74\2d\69\33\32\00\1c\0e\74\79\70"
  "\65\2d\66\69\72\73\74\2d\69\36\34\00\1d\0e\74\79"
  "\70\65\2d\66\69\72\73\74\2d\66\33\32\00\1e\0e\74"
  "\79\70\65\2d\66\69\72\73\74\2d\66\36\34\00\1f\0f"
  "\74\79\70\65\2d\73\65\63\6f\6e\64\2d\69\33\32\00"
  "\20\0f\74\79\70\65\2d\73\65\63\6f\6e\64\2d\69\36"
  "\34\00\21\0f\74\79\70\65\2d\73\65\63\6f\6e\64\2d"
  "\66\33\32\00\22\0f\74\79\70\65\2d\73\65\63\6f\6e"
  "\64\2d\66\36\34\00\23\08\64\69\73\70\61\74\63\68"
  "\00\24\13\64\69\73\70\61\74\63\68\2d\73\74\72\75"
  "\63\74\75\72\61\6c\00\25\08\63\61\6c\6c\2d\74\61"
  "\62\00\28\03\66\61\63\00\29\04\65\76\65\6e\00\2b"
  "\03\6f\64\64\00\2c\0e\63\61\6c\6c\5f\74\61\69\6c"
  "\70\72\69\6e\74\00\2d\09\63\61\6c\6c\5f\6d\70\6d"
  "\72\00\2e\09\e3\80\80\80\00\04\04\41\00\0b\14\d2"
  "\01\0b\d2\02\0b\d2\03\0b\d2\04\0b\d2\05\0b\d2\06"
  "\0b\d2\07\0b\d2\08\0b\d2\0b\0b\d2\09\0b\d2\0c\0b"
  "\d2\0a\0b\d2\29\0b\d2\2a\0b\d2\2b\0b\d2\2c\0b\d2"
  "\0d\0b\d2\0e\0b\d2\0f\0b\d2\10\0b\06\01\41\00\0b"
  "\70\01\d2\26\0b\06\02\41\00\0b\70\01\d2\27\0b\06"
  "\03\41\00\0b\70\02\d2\11\0b\d2\13\0b\0a\e6\85\80"
  "\80\00\2e\85\80\80\80\00\00\41\b2\02\0b\85\80\80"
  "\80\00\00\42\e4\02\0b\87\80\80\80\00\00\43\00\20"
  "\73\45\0b\8b\80\80\80\00\00\44\00\00\00\00\00\c8"
  "\ae\40\0b\84\80\80\80\00\00\20\00\0b\84\80\80\80"
  "\00\00\20\00\0b\84\80\80\80\00\00\20\00\0b\84\80"
  "\80\80\00\00\20\00\0b\84\80\80\80\00\00\20\01\0b"
  "\84\80\80\80\00\00\20\01\0b\84\80\80\80\00\00\20"
  "\01\0b\84\80\80\80\00\00\20\01\0b\84\80\80\80\00"
  "\00\20\00\0b\84\80\80\80\00\00\20\00\0b\84\80\80"
  "\80\00\00\20\00\0b\84\80\80\80\00\00\20\00\0b\88"
  "\80\80\80\00\00\20\00\20\01\12\00\0b\88\80\80\80"
  "\00\00\20\01\a7\20\00\b6\0b\88\80\80\80\00\00\20"
  "\00\20\01\12\12\0b\a7\80\80\80\00\00\41\00\13\00"
  "\00\42\00\41\00\13\14\00\42\00\44\00\00\00\00\00"
  "\00\00\00\41\00\42\00\41\00\13\13\00\41\00\13\00"
  "\00\0b\a7\80\80\80\00\00\41\00\13\01\00\41\00\13"
  "\01\00\42\00\41\00\13\16\00\42\00\44\00\00\00\00"
  "\00\00\00\00\41\00\42\00\41\00\13\15\00\0b\89\80"
  "\80\80\00\00\42\00\41\00\13\06\00\0b\87\80\80\80"
  "\00\00\41\00\13\01\00\0b\87\80\80\80\00\00\41\01"
  "\13\02\00\0b\87\80\80\80\00\00\41\02\13\03\00\0b"
  "\87\80\80\80\00\00\41\03\13\04\00\0b\8a\80\80\80"
  "\00\00\42\e4\00\41\05\13\06\00\0b\89\80\80\80\00"
  "\00\41\20\41\04\13\05\00\0b\8a\80\80\80\00\00\42"
  "\c0\00\41\05\13\06\00\0b\8c\80\80\80\00\00\43\c3"
  "\f5\a8\3f\41\06\13\07\00\0b\90\80\80\80\00\00\44"
  "\3d\0a\d7\a3\70\3d\fa\3f\41\07\13\08\00\0b\8e\80"
  "\80\80\00\00\43\66\66\00\42\41\20\41\08\13\09\00"
  "\0b\8c\80\80\80\00\00\41\20\42\c0\00\41\09\13\0a"
  "\00\0b\95\80\80\80\00\00\44\00\00\00\00\00\00\50"
  "\40\43\00\00\00\42\41\0a\13\0b\00\0b\93\80\80\80"
  "\00\00\42\c0\00\44\66\66\66\66\66\06\50\40\41\0b"
  "\13\0c\00\0b\89\80\80\80\00\00\20\01\20\00\13\06"
  "\00\0b\89\80\80\80\00\00\42\09\20\00\13\0e\00\0b"
  "\85\80\80\80\00\00\41\b3\02\0b\85\80\80\80\00\00"
  "\41\b4\02\0b\ab\80\80\80\00\00\20\00\41\00\46\04"
  "\40\41\00\13\01\00\0b\20\00\41\01\46\04\40\41\00"
  "\13\01\01\0b\20\00\41\02\46\04\40\41\00\13\01\02"
  "\0b\41\00\0b\8b\80\80\80\00\00\20\00\42\01\41\0d"
  "\13\18\00\0b\9a\80\80\80\00\00\20\00\50\04\7e\20"
  "\01\05\20\00\42\01\7d\20\00\20\01\7e\41\0d\13\18"
  "\00\0b\0b\95\80\80\80\00\00\20\00\45\04\7f\41\2c"
  "\05\20\00\41\01\6b\41\0f\13\05\00\0b\0b\96\80\80"
  "\80\00\00\20\00\45\04\7f\41\e3\00\05\20\00\41\01"
  "\6b\41\0e\13\05\00\0b\0b\8b\80\80\80\00\00\20\00"
  "\20\01\41\00\13\11\03\0b\8b\80\80\80\00\00\20\00"
  "\20\01\41\01\13\12\03\0b"
)
(module instance)
(assert_return (invoke "type-i32") (i32.const 0x132))
(assert_return (invoke "type-i64") (i64.const 0x164))
(assert_return (invoke "type-f32") (f32.const 0x1.e64p+11))
(assert_return (invoke "type-f64") (f64.const 0x1.ec8p+11))
(assert_return (invoke "type-index") (i64.const 0x64))
(assert_return (invoke "type-first-i32") (i32.const 0x20))
(assert_return (invoke "type-first-i64") (i64.const 0x40))
(assert_return (invoke "type-first-f32") (f32.const 0x1.51eb_86p+0))
(assert_return (invoke "type-first-f64") (f64.const 0x1.a3d7_0a3d_70a3_dp+0))
(assert_return (invoke "type-second-i32") (i32.const 0x20))
(assert_return (invoke "type-second-i64") (i64.const 0x40))
(assert_return (invoke "type-second-f32") (f32.const 0x1p+5))
(assert_return (invoke "type-second-f64") (f64.const 0x1.0066_6666_6666_6p+6))
(assert_return
  (invoke "dispatch" (i32.const 0x5) (i64.const 0x2))
  (i64.const 0x2)
)
(assert_return
  (invoke "dispatch" (i32.const 0x5) (i64.const 0x5))
  (i64.const 0x5)
)
(assert_return
  (invoke "dispatch" (i32.const 0xc) (i64.const 0x5))
  (i64.const 0x78)
)
(assert_return
  (invoke "dispatch" (i32.const 0x11) (i64.const 0x2))
  (i64.const 0x2)
)
(assert_trap
  (invoke "dispatch" (i32.const 0x0) (i64.const 0x2))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch" (i32.const 0xf) (i64.const 0x2))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch" (i32.const 0x16) (i64.const 0x2))
  "undefined element"
)
(assert_trap
  (invoke "dispatch" (i32.const 0xffff_ffff) (i64.const 0x2))
  "undefined element"
)
(assert_trap
  (invoke "dispatch" (i32.const 0x4853_8267) (i64.const 0x2))
  "undefined element"
)
(assert_return (invoke "dispatch-structural" (i32.const 0x5)) (i64.const 0x9))
(assert_return (invoke "dispatch-structural" (i32.const 0x5)) (i64.const 0x9))
(assert_return
  (invoke "dispatch-structural" (i32.const 0xc))
  (i64.const 0x5_8980)
)
(assert_return (invoke "dispatch-structural" (i32.const 0x11)) (i64.const 0x9))
(assert_trap
  (invoke "dispatch-structural" (i32.const 0xb))
  "indirect call type mismatch"
)
(assert_trap
  (invoke "dispatch-structural" (i32.const 0x10))
  "indirect call type mismatch"
)
(assert_return (invoke "call-tab" (i32.const 0x0)) (i32.const 0x132))
(assert_return (invoke "call-tab" (i32.const 0x1)) (i32.const 0x133))
(assert_return (invoke "call-tab" (i32.const 0x2)) (i32.const 0x134))
(assert_return (invoke "fac" (i64.const 0x0)) (i64.const 0x1))
(assert_return (invoke "fac" (i64.const 0x1)) (i64.const 0x1))
(assert_return (invoke "fac" (i64.const 0x5)) (i64.const 0x78))
(assert_return
  (invoke "fac" (i64.const 0x19))
  (i64.const 0x619f_b090_7bc0_0000)
)
(assert_return (invoke "even" (i32.const 0x0)) (i32.const 0x2c))
(assert_return (invoke "even" (i32.const 0x1)) (i32.const 0x63))
(assert_return (invoke "even" (i32.const 0x64)) (i32.const 0x2c))
(assert_return (invoke "even" (i32.const 0x4d)) (i32.const 0x63))
(assert_return (invoke "even" (i32.const 0x1_86a0)) (i32.const 0x2c))
(assert_return (invoke "even" (i32.const 0x1_b207)) (i32.const 0x63))
(assert_return (invoke "odd" (i32.const 0x0)) (i32.const 0x63))
(assert_return (invoke "odd" (i32.const 0x1)) (i32.const 0x2c))
(assert_return (invoke "odd" (i32.const 0xc8)) (i32.const 0x63))
(assert_return (invoke "odd" (i32.const 0x4d)) (i32.const 0x2c))
(assert_return (invoke "odd" (i32.const 0x3_0d42)) (i32.const 0x63))
(assert_return (invoke "odd" (i32.const 0x4_93e3)) (i32.const 0x2c))
(assert_return (invoke "call_tailprint" (i32.const 0x5) (f32.const 0x1.6cp+6)))
(assert_return
  (invoke "call_mpmr" (f64.const 0x1.0ccc_cccc_cccc_dp+2) (i64.const 0x63))
  (i32.const 0x63)
  (f32.const 0x1.0ccc_ccp+2)
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8d\80\80\80\00"
    "\01\87\80\80\80\00\00\41\00\13\00\00\0b"
  )
  "unknown table"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\8e\80\80\80\00\01\88\80\80\80\00"
    "\00\41\00\13\00\00\45\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7e\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8e\80\80\80\00\01\88"
    "\80\80\80\00\00\41\00\13\00\00\45\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8d\80\80\80\00\01\87"
    "\80\80\80\00\00\41\00\13\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7c\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\8d\80\80\80\00\01"
    "\87\80\80\80\00\00\41\00\13\00\00\0b"
  )
  "type mismatch"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
  "\01\70\00\00\0a\8f\80\80\80\00\01\89\80\80\80\00"
  "\00\41\01\41\00\13\00\00\0b"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
  "\01\70\00\00\0a\98\80\80\80\00\01\92\80\80\80\00"
  "\00\44\00\00\00\00\00\00\00\40\41\01\41\00\13\00"
  "\00\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8e\80\80\80\00\01\88"
    "\80\80\80\00\00\41\01\01\13\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\03\82\80\80\80\00\01\01\04\84"
    "\80\80\80\00\01\70\00\00\0a\8f\80\80\80\00\01\89"
    "\80\80\80\00\00\41\00\42\01\13\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\90\80\80\80\00\01"
    "\8a\80\80\80\00\00\01\41\01\41\00\13\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\90\80\80\80\00\01"
    "\8a\80\80\80\00\00\41\01\01\41\00\13\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7c\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\98\80\80\80\00\01"
    "\92\80\80\80\00\00\44\00\00\00\00\00\00\f0\3f\41"
    "\01\41\00\13\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7c\7f\00\60\00\00\03\82\80\80\80\00\01\01\04"
    "\84\80\80\80\00\01\70\00\00\0a\98\80\80\80\00\01"
    "\92\80\80\80\00\00\41\01\44\00\00\00\00\00\00\f0"
    "\3f\41\00\13\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8b\80\80\80\00\02\60"
    "\00\02\7f\7f\60\01\7f\01\7f\02\8f\80\80\80\00\01"
    "\03\65\6e\76\05\74\61\62\6c\65\01\70\00\00\03\82"
    "\80\80\80\00\01\01\0a\8d\80\80\80\00\01\87\80\80"
    "\80\00\00\20\00\13\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\6f\00\0a\0a\8d\80\80\80\00\01\87\80\80\80\00"
    "\00\41\00\13\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\8d\80\80\80\00\01\87\80\80\80\00"
    "\00\41\00\13\01\00\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\84\80\80\80\00"
    "\01\70\00\00\0a\91\80\80\80\00\01\8b\80\80\80\00"
    "\00\41\00\13\94\98\db\e2\03\00\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\04\85\80\80\80\00\01\70"
    "\01\02\02\09\8c\80\80\80\00\01\04\41\00\0b\02\d2"
    "\00\0b\d2\00\0b"
  )
  "unknown function 0"
)
